--- a/FibonacciSequenceSeries/Fibonacci.Tests/Fibonacci.Tests.csproj
+++ b/FibonacciSequenceSeries/Fibonacci.Tests/Fibonacci.Tests.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Fibonacci.Library\Fibonacci.Library.csproj">
+      <Project>{131f67e2-ee87-48e7-b305-9fb91f175aa4}</Project>
+      <Name>Fibonacci.Library</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
