--- a/ConwaysGameOfLife/Conway.Library.Tests/Conway.Library.Tests.csproj
+++ b/ConwaysGameOfLife/Conway.Library.Tests/Conway.Library.Tests.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Conway.Library\Conway.Library.csproj">
+      <Project>{bf877fdf-63b5-49d9-ae44-d9a9b23a096f}</Project>
+      <Name>Conway.Library</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
